cabal-version:       >=1.10

name:                DotGhci
version:             0.1.0.6
synopsis:            Some usefull fonctions for my .ghci
-- description:
-- bug-reports:
license:             GPL-3
license-file:        LICENSE
author:              enikar
maintainer:          enikar@chezlefab.net
-- copyright:
-- category:
build-type:          Simple
extra-source-files:  README, CHANGELOG.md

library
    exposed-modules: DotGhci
    -- other-modules:
    -- other-extensions:
    build-depends:       base >=4.13 && <4.14, hscolour >=1.24 && <1.25, pretty-show >=1.10 && <1.11, ghc-paths >=0.1 && <0.2, directory >=1.3.6 && <1.4
    -- hs-source-dirs:
    default-language:    Haskell2010
    ghc-options: -O2